--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,13 @@ button.answer-button{
     margin-right:20px;
     font-size:25px;
 }
+
+#restart-button{
+    background-color: #333;
+    border-color: #222;
+}
+
+#restart-button:hover{
+    background-color: #000;
+    border-color: #000;
+}
